--- a/musicreview/reactfrontend/src/myReviews/SideMenu.css
+++ b/musicreview/reactfrontend/src/myReviews/SideMenu.css
@@ -6,11 +6,7 @@
     flex-direction: column;
     height: 99vh;
     padding: .2em;
-    max-width: 30rem;
-}
-
-.href {
-    font: #ffffff;
+    width: 9rem;
 }
 
 .buttons {
@@ -27,6 +23,7 @@
     width: 100%;
     color: #ffffff;
     border-radius: 0;
+    box-shadow: none;
 }
 
 .buttons Button:hover {
@@ -38,13 +35,13 @@
     justify-content: center;
     align-self: center;
     display: flex;
-    margin: 0 .2em;
+    margin: .2em;
     color: #ffffff;
     font-size: 1rem;
     height: 70%;
 }
 
-.logout p {
+.logout {
     background-color: inherit;
     justify-content: center;
     align-self: baseline;
@@ -52,4 +49,19 @@
     flex-direction: column;
     width: 100%;
     height: 10%;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.logout Button {
+    color: #ffffff;
+    background-color: inherit;
+    width: 100%;
+    box-shadow: none;
+    border-radius: 0;
+    margin-top: .25rem;
+}
+
+.logout Button:hover {
+    background-color: #1E2838;
 }
